--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,7 +15,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="/js/rating.js"></script>
+    
+
+    @*-------Links for checkbox---------*@
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.min.js"></script>
+
+
+     <!-- Font Awesome -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+
+   
+
+
     <link rel="stylesheet" href="~/css/platformlandingpage.css">
     <link rel="stylesheet" href="~/css/storylisting.css">
     
@@ -238,8 +254,8 @@
                                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad 
                                 minim veniam.</p>
                                 <br>
-                                <button class="share-btn">Share your story &nbsp;
-                                    <img src="~/NewFolder/right-arrow2.png" alt="">
+                                <button class="share-btn" asp-action="ShareYourStory" asp-controller="Home">Share your story &nbsp;
+                                    @*<img src="~/NewFolder/right-arrow2.png" alt="">*@
     
                                 </button>
                         </div>
@@ -255,7 +271,13 @@
 <br>
 <div class="main">
     <div class="row" style="width: 100%;">
+           @{
+                foreach (var itemss in ViewBag.stories)
+                {
         <div class="col-md-6 col-lg-4 main-card">
+
+         
+
             <div class="card " style="width:100%;">
                 
                     <img class="card-img-top" src="~/NewFolder/imgenv.png" alt="Card image cap">
@@ -263,263 +285,44 @@
                 
                 <div class="row">
                     <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
+                        <button class="round-btn">@itemss.m.Title</button>
                     </div>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
+                  <h5 class="card-title" id="processedStoryData">@itemss.s.Title</h5>
+                  <p class="card-text" style="text-align: justify; font-size: small;">@itemss.s.Description</p>
                     <br>
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
                             <img src="~/NewFolder/volunteer1.png" alt="" class="vol-img">
                         </div>
                         <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
+                            <p class="vol-name">@itemss.u.FirstName</p>
+                            <p class="vol-name">@itemss.s.PublishedAt.ToShortDateString()</p>
                         </div>
+                      
+                   
                         <div class="col-md-3 col-sm-3"></div>
                         <div class="col-sm-3"></div>
                     </div>
                   <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                 </div>
               </div>
+              
         </div>
-        
-        <div class="col-md-6 col-lg-4">
-            <div class="card" style="width:100%; ">
-                <img class="card-img-top" src="~/NewFolder/imgedu.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer2.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                </div>
-              </div>
-        </div>
+        }
+              }
+      </div>
+      
 
-        <div class="col-md-6 col-lg-4 ">
-            <div class="card" style="width:100%;">
-                <img class="card-img-top" src="~/NewFolder/imgchild.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer3.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                </div>
-              </div>
-        </div>
-    </div>
-    <br>
     <!-- Row 2 -->
 
-    <div class="row" style="width: 100%;">
-        <div class="col-md-6 col-lg-4">
-            <div class="card" style="width:100%;">
-                <img class="card-img-top" src="~/NewFolder/imgenv.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer4.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  
-                </div>
-              </div>
-        </div>
-        
-        <div class="col-md-6 col-lg-4">
-            <div class="card" style="width:100%; ">
-                <img class="card-img-top" src="~/NewFolder/imgedu.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer5.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  
-                </div>
-              </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 ">
-            <div class="card" style="width:100%;">
-                <img class="card-img-top" src="~/NewFolder/imgchild.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer6.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  
-                </div>
-              </div>
-        </div>
-    </div>
-    <br>
+    
     <!-- Row 3 -->
 
-    <div class="row" style="width: 100%;">
-        <div class="col-md-6 col-lg-4">
-            <div class="card" style="width:100%;">
-                <img class="card-img-top" src="~/NewFolder/imgenv.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer7.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                </div>
-              </div>
-        </div>
-        
-        <div class="col-md-6 col-lg-4">
-            <div class="card" style="width:100%; ">
-                <img class="card-img-top" src="~/NewFolder/imgedu.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer8.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  
-                </div>
-              </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 ">
-            <div class="card" style="width:100%;">
-                <img class="card-img-top" src="~/NewFolder/imgchild.png" alt="Card image cap">
-                <div class="row">
-                    <div class="col-12" style="text-align: center; margin-top: -3%;">
-                        <button class="round-btn">Customer Experience</button>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">10 User and Customer <br> Engagement Strategies for 2019</h5>
-                  <p class="card-text" style="text-align: justify; font-size: small;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore...</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-3" style="width: 50%;">
-                            <img src="~/NewFolder/volunteer9.png" alt="" class="vol-img">
-                        </div>
-                        <div class="col-lg-8 col-md-5 col-sm-3" style="margin-top: 3%; width: 50%;">
-                            <p class="vol-name">Estella Fowles</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3"></div>
-                        <div class="col-sm-3"></div>
-                    </div>
-                  
-                </div>
-              </div>
-        </div>
-    </div>
 <br><br>
     <!-- Pagination -->
+
 <div class="pagination">
     <nav aria-label="Page navigation example">
         <ul class="pagination">
@@ -556,7 +359,7 @@
       </nav>
 </div>
     
-</div>
+
             
 
 </div>
@@ -575,5 +378,8 @@
     </div>
 </footer>
 <br>
+
+
+ <script src="~/js/landing.js"></script>
 </body>
 </html>
