Story Listing and Share your story (Add)

--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -66,7 +66,7 @@
                     <ul class="navbar-nav mr-auto">
 
                         <li class="nav-item stories">
-                            <a class="nav-link" href="#">Stories</a>
+                            <a class="nav-link" asp-action="StoryListing" asp-controller="Home">Stories</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle dropdown-policy" href="#" id="navbarDropdown"
