--- a/MVC/CIPlatform/CIPlatform/Views/Home/Index.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
 
 </head>
 
-<body>
+<body onload="document.FormName.reset();">
 
 
     <!-- Section: Split screen -->
@@ -116,10 +116,12 @@
                             {
                                 if(ViewBag.LoginStatus == 0)
                                 {
-                                    <div class="alert alert-danger">Invalid Login Credentials</div>
-                                }
+                                <div class="alert alert-danger">Invalid Login Credentials</div>
+                                
                             }
-                        
+                        }
+                      
+
 
 
 
@@ -128,7 +130,7 @@
                         <label class="lbl-email">Email Address</label>
                         <br>
 
-                        @Html.TextBoxFor(u => u.LoginId, new {@class = "txt-inp", @placeholder=" Enter your email address"})
+                        @Html.TextBoxFor(u => u.LoginId, new {@class = "txt-inp", @placeholder=" Enter your email address", @type="email"})
                         
                         @*<input type="text" asp-for="User.Email" class="txt-inp" placeholder=" Enter your email address">*@
 
@@ -136,7 +138,7 @@
 
                         <label class="lbl-pass">Password</label>
                         <br>
-                        @Html.TextBoxFor(u => u.Password, new {@class = "txt-inp", @placeholder=" Enter your password"})
+                            @Html.TextBoxFor(u => u.Password, new {@class = "txt-inp", @placeholder=" Enter your password", @type="password"})
                         @*<input type="password" asp-for="User.Password" name="password" class="txt-inp" placeholder=" Enter your password">*@
                         <br>
 
