--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/storylisting.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/storylisting.css
@@ -1,6 +1,7 @@
 ﻿.img-story-list {
     position: relative;
     background-color: #000;
+    
     height: 100%;
     text-align: center;
 }
@@ -40,7 +41,10 @@
     border-radius: 24px;
     color: white;
     padding: 0.5% 1% 0.5% 1%;
+    text-decoration: none;
 }
+
+
 
 .round-btn {
     background: #FFFFFF 0% 0% no-repeat padding-box;
