--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
@@ -376,12 +376,12 @@
 
 
             <div class="col-md-6 right-div ">
-                @foreach (var item in ViewBag.result)
+                @foreach (var item in ViewBag.specificmission)
 
                 {
                     <div class="txt">
-                        <h1 class="main-txt">@item.m.Title</h1>
-                        <p class="para">@item.m.ShortDescription</p>
+                        <h1 class="main-txt">@item.Title</h1>
+                        <p class="para">@item.ShortDescription</p>
                         <br>
                         <div class="hr-btn">
                             <hr class="hr-line">
@@ -394,7 +394,7 @@
                             <div class="col-6 img-and-txt" style="display: flex;">
                                 <img class="icons1" src="~/NewFolder/Seats-left.png">
                                 <div class="hssh">
-                                    <p class="seatno"><b>@item.m.Availability</b> </p>
+                                    <p class="seatno"><b>@item.Availability</b> </p>
                                     <p class="seat">Seats Left</p>
                                 </div>
                             </div>
@@ -431,7 +431,7 @@
 
                                         if (@ViewBag.favlist.Count == 0)
                                         {
-                                            <i onclick="likeMission(@item.m.MissionId)" class="far fa-heart"></i>
+                                            <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
                                         }
 
                                         else
@@ -442,9 +442,9 @@
                                             for (var i = 0; i < v.Count; i++)
                                             {
 
-                                                if (@ViewBag.favlist[i].MissionId == item.m.MissionId && @ViewBag.favlist[i].UserId == ViewBag.ids)
+                                                if (@ViewBag.favlist[i].MissionId == item.MissionId && @ViewBag.favlist[i].UserId == ViewBag.ids)
                                                 {
-                                                    <i onclick="likeMission(@item.m.MissionId)" style="color:red" class="fas fa-heart"></i>
+                                                    <i onclick="likeMission(@item.MissionId)" style="color:red" class="fas fa-heart"></i>
                                                     break;
 
                                                 }
@@ -454,7 +454,7 @@
                                                 {
                                                     if (i == v.Count - 1)
                                                     {
-                                                        <i onclick="likeMission(@item.m.MissionId)" class="far fa-heart"></i>
+                                                        <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
                                                     }
 
                                                 }
@@ -503,7 +503,7 @@
                                                         </li>
                                                     }
                                                     <br>
-                                                    <button id="btn_" onclick="rccall(@item.m.MissionId)">Submit</button>
+                                                    <button id="btn_" onclick="rccall(@item.MissionId)">Submit</button>
 
                                                 </ul>
                                             </li>
@@ -590,7 +590,7 @@
                                         <div class="all-content">
                                             <img src="~/NewFolder/pin1.png" class="pin-img" alt="">
                                             <p class="city">City</p>
-                                            <p class="london">@item.Name</p>
+                                            <p class="london">@item.City.Name</p>
                                         </div>
 
                                     </div>
@@ -600,7 +600,7 @@
                                         <div class="all-content">
                                             <img src="~/NewFolder/web.png" class="pin-img" alt="">
                                             <p class="city">Theme</p>
-                                            <p class="london">@item.Title</p>
+                                            <p class="london">@item.Theme.Title</p>
                                         </div>
                                     </div>
                                 </div>
@@ -609,7 +609,7 @@
                                         <div class="all-content">
                                             <img src="~/NewFolder/calender.png" class="pin-img" alt="">
                                             <p class="city">Date</p>
-                                            <p class="london">@item.m.StartDate.ToShortDateString()</p>
+                                            <p class="london">@item.StartDate.ToShortDateString()</p>
                                         </div>
 
                                     </div>
@@ -619,7 +619,7 @@
                                         <div class="all-content">
                                             <img src="~/NewFolder/add1.png" class="pin-img" alt="">
                                             <p class="city">Organization</p>
-                                            <p class="london">@item.m.OrganizationName</p>
+                                            <p class="london">@item.OrganizationName</p>
                                         </div>
                                     </div>
                                 </div>
@@ -654,7 +654,7 @@
             <div class="row">
 
                 <div class="col-md-8">
-                    @foreach (var item in ViewBag.result)
+                    @foreach (var item in ViewBag.specificmission)
                     {
 
                         <ul class="nav nav-tabs">
@@ -667,7 +667,7 @@
                         <div class="tab-content">
                             <div id="mission" class="tab-pane fade show active">
                                 <h3>Introduction</h3>
-                                <p class="para-lorem">@item.m.Description</p>
+                                <p class="para-lorem">@item.Description</p>
 
 
                                 <h3>Challenge</h3>
@@ -698,7 +698,7 @@
                                     <div class="col-lg-4 col-md-6 col-sm-6">
                                         <button class="doc-btn">
 
-                                            <img src="~/NewFolder/pdf.png" alt=""> <a href="@item.DocumentPath" target="_blank">@item.DocumentName</a>
+                                            @*<img src="~/NewFolder/pdf.png" alt=""> <a href="@item.DocumentPath" target="_blank">@item.DocumentName</a>*@
 
 
                                         </button>
@@ -737,7 +737,7 @@
                             <div id="org" class="tab-pane fade">
                                 <h3>Organization Details</h3>
 
-                                <p class="para-lorem">@item.m.OrganizationDetail</p>
+                                <p class="para-lorem">@item.OrganizationDetail</p>
 
 
 
@@ -749,7 +749,7 @@
                                 <textarea id="textAreas"></textarea>
                                 <br>
                                 <br>
-                                <button onclick="commentadd(@item.m.MissionId)" id="submitButton">Submit</button>
+                                <button onclick="commentadd(@item.MissionId)" id="submitButton">Submit</button>
 
 
                                 <br>
@@ -792,7 +792,7 @@
                     }
                 </div>
                 <div class="col-md-4">
-                    @foreach (var item in ViewBag.result)
+                    @foreach (var item in ViewBag.specificmission)
                     {
                         <div class="row right-down">
                             <div class="col">
